--- a/languages.toml
+++ b/languages.toml
@@ -1523,7 +1523,7 @@ args = { console = "internalConsole", attachCommands = [ "platform select remote
 
 [[grammar]]
 name = "zig"
-source = { git = "https://github.com/tree-sitter-grammars/tree-sitter-zig", rev = "eb7d58c2dc4fbeea4745019dee8df013034ae66b" }
+source = { path="/home/e/contrib/tree-sitter-zig" }
 
 [[language]]
 name = "prolog"
